contact z-index fixed, scrollbar styled

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -93,6 +93,7 @@
 .contact {
     display: flex;
     flex-direction: column;
+    z-index: 2;
 }
 
 .contact>div:first-child {
